  presently used for parsing/printing, see also isar-ref manual.

* Pure: tuned internal renaming of symbolic identifiers -- attach
  primes instead of base 26 numbers.

* Document preparation: antiquotations now provide the option
  'locale=NAME' to specify an alternative context used for evaluating
  and printing the subsequent argument, as in @{thm [locale=LC]
  fold_commute}, for example.

* ML: output via the Isabelle channels of writeln/warning/error
  etc. is now passed through Output.output, with a hook for arbitrary
  transformations depending on the print_mode (cf. Output.add_mode --
  the first active mode that provides a output function wins).
  Already formatted output may be embedded into further text via
  Output.raw; the result of Pretty.string_of/str_of and derived
  functions (string_of_term/cterm/thm etc.) is already marked raw to
  accommodate easy composition of diagnostic messages etc.
  Programmers rarely need to care about Output.output or Output.raw at
  all, with some notable exceptions: Output.output is required when
  bypassing the standard channels (writeln etc.), or in token
  translations to produce properly formatted results; Output.raw is
  required when capturing already output material that will eventually
  be presented to the user a second time.


*** HOL ***

* HOL/record: reimplementation of records. Improved scalability for
  records with many fields, avoiding performance problems for type
  inference. Records are no longer composed of nested field types, but
  of nested extension types. Therefore the record type only grows
  linear in the number of extensions and not in the number of fields.
  The top-level (users) view on records is preserved.  Potential
  INCOMPATIBILITY only in strange cases, where the theory depends on
  the old record representation. The type generated for a record is
  called <record_name>_ext_type.

* HOL: symbolic syntax of Hilbert Choice Operator is now as follows:

  syntax (epsilon)